# TradingEngine

./: .gitignore  CMakeLists.txt  library.h  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: data.js
core/: CMakeLists.txt  fixed_size_pool_resource.cpp  fixed_size_pool_resource.h  pool_allocator.h  spsc_queue.cpp  spsc_queue.h  util.cpp  util.h
core/benchmarks/: CMakeLists.txt  fixed_size_pool_resource_bench.cpp  pool_allocator_bench.cpp  spsc_queue_bench.cpp
core/logging/: CMakeLists.txt  async_logger.cpp  async_logger.h  logger_enums.h  logger_utils.h  loggerr_enums.h
core/logging/benchmarks/: CMakeLists.txt  async_logger_bench.cpp
core/logging/tests/: CMakeLists.txt  async_logger_test.cpp  log_writer_test.cpp
core/memory/: CMakeLists.txt  fixed_size_pool_resource.h  pool_resource.h
core/memory/benchmarks/: CMakeLists.txt  fixed_size_pool_resource_bench.cpp  fixed_size_pool_resource_comparison_bench.cpp
core/memory/tests/: CMakeLists.txt  fixed_size_pool_resource_test.cpp  pool_resource_test.cpp
core/queue/: CMakeLists.txt  spsc_queue.h
core/queue/benchmarks/: CMakeLists.txt  spsc_queue_bench.cpp  spsc_queue_comparison_bench.cpp
core/queue/tests/: CMakeLists.txt  spsc_queue_test.cpp
core/tests/: CMakeLists.txt  fixed_size_pool_resource_test.cpp  pool_allocator_test.cpp  spsc_queue_test.cpp
core/util/: CMakeLists.txt  overloaded_visitor.h  util.h
networking/: CMakeLists.txt
networking/itch/: CMakeLists.txt  messages.h
orderbook/: CMakeLists.txt  matching_engine.h  order.cpp  order.h  order_book.cpp  order_book.h  order_book_listener.cpp  order_book_listener.h
orderbook/benchmarks/: CMakeLists.txt  orderbook_bench.cpp
orderbook/tests/: CMakeLists.txt  matching_engine_tests.cpp  order_book_tests.cpp
